chore: added logo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- Logo -->
         <h1 id="logo">
           <a href="https://github.com/Sumit-jr"> 
-            <img src="https://avatars.githubusercontent.com/u/98244807?v=4" alt="Sumit Sah" />
+            <img src="assets/logo.png" alt="Sumit Sah" />
           </a>
         </h1>
         <!-- Navbar links -->
