--- a/index.html
+++ b/index.html
@@ -222,7 +222,9 @@
       <div class="social">
         <a href="https://twitter.com/SumitSah_Jr"><img  src="https://cdn-icons-png.flaticon.com/512/124/124021.png"  alt="Twitter" /></a>
         <a href="https://www.linkedin.com/in/sumit-prasad-sah/"><img  src="https://cdn-icons-png.flaticon.com/512/174/174857.png"  alt="Linkedin" /></a>
-        <a href="https://github.com/Sumit-jr"><img  src="../assets/github-icon.svg"   alt="GitHub" /></a>
+        <a href="https://github.com/Sumit-jr" target="_blank" rel="noopener noreferrer" style="text-decoration:none;">
+  <i class="fab fa-github" style="font-size: 24px; color: white;"></i>
+</a>
         <a href="https://medium.com/@er.sumitsah"> 
           <i class="fab fa-medium fa-2x" style="color: white;"></i>
         </a>
