refactor: simplify Quick Facts by removing redundancy between badges and meta list

--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
   <link rel="manifest" href="site.webmanifest">
 
   <!-- Font Awesome (CDN) with SRI -->
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-        integrity="sha512-IfW2TvzVK1kBf0j6vKQbPSuDZ0F+UXBUnr59CdQMYjD6L9w3y3U+BrHZr10L0M/66K8uJxiV0jD20/HSY5qfVA=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer">
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+  referrerpolicy="no-referrer"
+/>
+
 
   <!-- Schema.org Person -->
   <script type="application/ld+json">
@@ -105,7 +106,7 @@
           </div>
 
           <p class="kicker">AI • Cybersecurity • Research</p>
-          <p class="tagline">Cybersecurity & Network Security Enthusiast | Research Contributor | Computer Science Graduate</p>
+          <p class="tagline">Cybersecurity & AI Researcher | IEEE Author | Patent Holder</p>
 
           <p class="subtitle">
             I build practical AI systems—virtual try-on, intrusion detection, and IoT health monitoring—that are both research-driven
@@ -131,9 +132,9 @@
             <span class="badge"><i class="fa-solid fa-graduation-cap" aria-hidden="true"></i> B.Tech CSE</span>
           </div>
           <ul class="meta list">
-            <li>Published at 15th ICCCNT (IEEE)</li>
-            <li>Granted Indian Patent (HealthGuard)</li>
-            <li>Focus: SOC-oriented ML, CV, IoT</li>
+            <li>Research in Cybersecurity & ML (IEEE-published)</li>
+            <li>Granted Patent – IoT Security & Monitoring</li>
+            <li>Research Focus – SOC-oriented ML, Network Security, Computer Vision</li>
           </ul>
           <p class="availability" role="note">
             <span class="dot" aria-hidden="true"></span>
@@ -141,105 +142,154 @@
             <a class="contact-btn" href="mailto:er.sumitsah@gmail.com">Contact →</a>
           </p>
 
-          <div class="socials" aria-label="Social profiles">
-            <a class="chip social" data-brand="linkedin" href="https://www.linkedin.com/in/sumit-prasad-sah/" target="_blank" rel="noopener noreferrer">
-              <i class="fa-brands fa-linkedin" aria-hidden="true"></i> <span>LinkedIn</span>
-            </a>
-            <a class="chip social" data-brand="github" href="https://github.com/Sumit-jr" target="_blank" rel="noopener noreferrer">
-              <i class="fa-brands fa-github" aria-hidden="true"></i> <span>GitHub</span>
-            </a>
-            <a class="chip social" data-brand="medium" href="https://medium.com/@er.sumitsah" target="_blank" rel="noopener noreferrer">
-              <i class="fa-brands fa-medium" aria-hidden="true"></i> <span>Medium</span>
-            </a>
-            <a class="chip social" data-brand="twitter" href="https://twitter.com/sumitsah_jr" target="_blank" rel="noopener noreferrer">
-              <i class="fa-brands fa-x-twitter" aria-hidden="true"></i> <span>Twitter</span>
-            </a>
-            <a class="chip social" data-brand="orcid" href="https://orcid.org/0009-0001-8084-7935" target="_blank" rel="noopener noreferrer">
-              <i class="fa-brands fa-orcid" aria-hidden="true"></i> <span>ORCID</span>
-            </a>
-          </div>
+        <div class="socials" aria-label="Social profiles">
+  <a class="chip social" data-brand="linkedin" href="https://www.linkedin.com/in/sumit-prasad-sah/" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-linkedin" aria-hidden="true"></i> <span>LinkedIn</span>
+  </a>
+  <a class="chip social" data-brand="github" href="https://github.com/Sumit-jr" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-github" aria-hidden="true"></i> <span>GitHub</span>
+  </a>
+  <a class="chip social" data-brand="medium" href="https://medium.com/@er.sumitsah" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-medium" aria-hidden="true"></i> <span>Medium</span>
+  </a>
+  <a class="chip social" data-brand="twitter" href="https://twitter.com/sumitsah_jr" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-x-twitter" aria-hidden="true"></i> <span>Twitter</span>
+  </a>
+  <a class="chip social" data-brand="orcid" href="https://orcid.org/0009-0001-8084-7935" target="_blank" rel="noopener noreferrer">
+    <i class="fa-brands fa-orcid" aria-hidden="true"></i> <span>ORCID</span>
+  </a>
+  
+</div>
+
         </div>
       </div>
     </section>
 
     <!-- PROJECTS -->
-    <section id="projects" class="section">
-      <div class="container">
-        <h2>Projects</h2>
-        <p class="lead">Impact-driven engineering across AI, cybersecurity, and full-stack dev.</p>
-        <div class="grid">
-          <article class="card">
-            <h3>Movie Metadata Organiser — Ruby on Rails</h3>
-            <p class="meta">Rails · Devise · Stripe · Action Cable · Tailwind</p>
-            <p>Role-based platform with secure one-time payments, real-time notifications, and responsive UI.</p>
-            <div class="row">
-              <span class="pill">RBAC</span>
-              <span class="pill">Stripe</span>
-              <span class="pill">Realtime</span>
-            </div>
-            <div class="cta-row">
-              <a class="link" href="https://github.com/sumit-jr/Movie-Metadata-Organiser" target="_blank" rel="noopener noreferrer">Code →</a>
-            </div>
-          </article>
+<section id="projects" class="section">
+  <div class="container">
+    <h2>Research &  Projects</h2>
+    <p class="lead">Applied research in cybersecurity, reinforced with AI and full-stack engineering.</p>
 
-          <article class="card">
-            <h3>Virtual Clothes Try-On</h3>
-            <p class="meta">Python · OpenCV · DL (OpenPose, U²-Net, ResNet-101)</p>
-            <p>2D image-based VTON: segment person + garment and warp clothing with geometric matching—no 3D meshes required.</p>
-            <div class="row">
-              <span class="pill">Segmentation</span>
-              <span class="pill">Pose Estimation</span>
-              <span class="pill">Warping</span>
-            </div>
-            <div class="cta-row">
-              <a class="link" href="https://github.com/sumit-jr/clothes_virtual_try_on" target="_blank" rel="noopener noreferrer">Code →</a>
-            </div>
-          </article>
 
-          <article class="card">
-            <h3>Network Intrusion Detection (XGBoost)</h3>
-            <p class="meta">Python · ML · UNSW-NB15</p>
-            <p>Precision-oriented IDS with tuned XGBoost and threshold calibration to cut false positives while keeping recall.</p>
-            <div class="row">
-              <span class="pill">XGBoost</span>
-              <span class="pill">AUC/PR</span>
-              <span class="pill">Threshold Tuning</span>
-            </div>
-            <div class="cta-row">
-              <a class="link" href="https://github.com/Sumit-jr/Optimizing-XGBoost-Hyperparameters-for-Network-Intrusion-Detection" target="_blank" rel="noopener noreferrer">Code →</a>
-            </div>
-          </article>
+    <div class="grid">
 
-          <article class="card">
-            <h3>HealthGuard (IoT Vitals Monitoring)</h3>
-            <p class="meta">IoT · Arduino · Sensors · Cloud</p>
-            <p>Real-time vitals (HR, temp, SpO₂) with secure data path and alerts. Granted under Indian IP.</p>
-            <div class="row">
-              <span class="pill">Edge → Cloud</span>
-              <span class="pill">Privacy</span>
-              <span class="pill">Dashboards</span>
-            </div>
-            <div class="cta-row">
-              <a class="link" href="https://github.com/sumit-jr/HealthGuard-IoT-Based-Health-Monitoring-System" target="_blank" rel="noopener noreferrer">Code →</a>
-            </div>
-          </article>
+      <!-- Project 1 -->
+<!-- Project 1: Research – Major -->
+<article class="card project-card">
+  <img class="project-thumb"
+       src="assets/Projects/virtual-tryon.png"
+       alt="Virtual Clothes Try-On pipeline result preview"
+       width="960" height="540" loading="lazy" decoding="async" />
+  <div class="project-body">
+    <h3>Virtual Clothes Try-On</h3>
+    <p class="meta">Python · OpenCV · DL (OpenPose, U2-Net, ResNet-101)</p>
+    <p>2D image-based VTON: segment person + garment and warp clothing with geometric matching—no 3D meshes required.</p>
+    <div class="row">
+      <span class="pill">Segmentation</span>
+      <span class="pill">Pose Estimation</span>
+      <span class="pill">Warping</span>
+    </div>
+    <div class="cta-row">
+      <a class="btn code-btn" href="https://github.com/sumit-jr/clothes_virtual_try_on"
+         target="_blank" rel="noopener noreferrer">Code →</a>
+    </div>
+  </div>
+</article>
 
-          <article class="card">
-            <h3>Chicken Disease Detection (CNN)</h3>
-            <p class="meta">Python · DL · AWS</p>
-            <p>Coccidiosis detection pipeline with CI/CD and cloud testing for throughput and reliability.</p>
-            <div class="row">
-              <span class="pill">Vision</span>
-              <span class="pill">MLOps</span>
-              <span class="pill">Deployment</span>
-            </div>
-            <div class="cta-row">
-              <a class="link" href="https://github.com/sumit-jr/Chicken-Disease-Classification-Projects" target="_blank" rel="noopener noreferrer">Code →</a>
-            </div>
-          </article>
-        </div>
-      </div>
-    </section>
+<!-- Project 2: Research – Paper -->
+<article class="card project-card">
+  <img class="project-thumb"
+       src="assets/Projects/intrusion-detection.png"
+       alt="Intrusion Detection XGBoost IDS"
+       width="960" height="540" loading="lazy" decoding="async" />
+  <div class="project-body">
+    <h3>Network Intrusion Detection (XGBoost)</h3>
+    <p class="meta">Python · ML · UNSW-NB15</p>
+    <p>Precision-oriented IDS with tuned XGBoost and threshold calibration to cut false positives while keeping recall.</p>
+    <div class="row">
+      <span class="pill">XGBoost</span>
+      <span class="pill">AUC/PR</span>
+      <span class="pill">Threshold Tuning</span>
+    </div>
+    <div class="cta-row">
+      <a class="btn code-btn" href="https://github.com/Sumit-jr/Optimizing-XGBoost-Hyperparameters-for-Network-Intrusion-Detection"
+         target="_blank" rel="noopener noreferrer">Code →</a>
+    </div>
+  </div>
+</article>
+
+<!-- Project 3: Patent -->
+<article class="card project-card">
+  <img class="project-thumb"
+       src="assets/Projects/healthguard.png"
+       alt="HealthGuard IoT Vitals Monitoring System"
+       width="960" height="540" loading="lazy" decoding="async" />
+  <div class="project-body">
+    <h3>HealthGuard (IoT Vitals Monitoring)</h3>
+    <p class="meta">IoT · Arduino · Sensors · Cloud</p>
+    <p>Real-time vitals (HR, temp, SpO₂) with secure data path and alerts. Granted under Indian IP.</p>
+    <div class="row">
+      <span class="pill">Edge → Cloud</span>
+      <span class="pill">Privacy</span>
+      <span class="pill">Dashboards</span>
+    </div>
+    <div class="cta-row">
+      <a class="btn code-btn" href="https://github.com/sumit-jr/HealthGuard-IoT-Based-Health-Monitoring-System"
+         target="_blank" rel="noopener noreferrer">Code →</a>
+    </div>
+  </div>
+</article>
+
+<!-- Project 4: Internship -->
+<article class="card project-card">
+  <img class="project-thumb"
+       src="assets/Projects/movie-organiser.jpg"
+       alt="Movie Metadata Organiser Ruby on Rails App"
+       width="960" height="540" loading="lazy" decoding="async" />
+  <div class="project-body">
+    <h3>Movie Metadata Organiser — Ruby on Rails</h3>
+    <p class="meta">Rails · Devise · Stripe · Action Cable · Tailwind</p>
+    <p>Role-based platform with secure one-time payments, real-time notifications, and responsive UI.</p>
+    <div class="row">
+      <span class="pill">RBAC</span>
+      <span class="pill">Stripe</span>
+      <span class="pill">Realtime</span>
+    </div>
+    <div class="cta-row">
+      <a class="btn code-btn" href="https://github.com/sumit-jr/Movie-Metadata-Organiser"
+         target="_blank" rel="noopener noreferrer">Code →</a>
+    </div>
+  </div>
+</article>
+
+<!-- Project 5: Academic -->
+<article class="card project-card">
+  <img class="project-thumb"
+       src="assets/Projects/chicken-disease.png"
+       alt="Chicken Disease Detection CNN pipeline"
+       width="960" height="540" loading="lazy" decoding="async" />
+  <div class="project-body">
+    <h3>Chicken Disease Detection (CNN)</h3>
+    <p class="meta">Python · DL · AWS</p>
+    <p>Coccidiosis detection pipeline with CI/CD and cloud testing for throughput and reliability.</p>
+    <div class="row">
+      <span class="pill">Vision</span>
+      <span class="pill">MLOps</span>
+      <span class="pill">Deployment</span>
+    </div>
+    <div class="cta-row">
+      <a class="btn code-btn" href="https://github.com/sumit-jr/Chicken-Disease-Classification-Projects"
+         target="_blank" rel="noopener noreferrer">Code →</a>
+    </div>
+  </div>
+</article>
+
+
+    </div>
+  </div>
+</section>
+
 
     <!-- PATENTS -->
     <section id="patents" class="section">
