UX: fix nav target + polish - Nav: #works link corrected earlier; now fix label: “Research & Projects” (remove leading space) - Contact: remove duplicate _next hidden input - CSS: ensure pill text readable in dark mode via --pill-text (#0c0f14) - JS: remove unused DOI display snippet (we now hard-code DOI links) - UX: add scroll-margin-top so headings aren’t hidden under sticky header - Docs: clarify Font Awesome SRI (add or drop comment)

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
       <nav aria-label="Primary">
         <ul id="primaryNav">
-          <li><a href="#projects"> Reseach & Projects</a></li>
-          <li><a href="#work">Patents & Publications</a></li>
+          <li><a href="#projects">Research & Projects</a></li>
+          <li><a href="#works">Patents & Publications</a></li>
           <li><a href="#blog">Blog</a></li>
           <li><a href="#contact">Contact</a></li>
           <li>
@@ -463,9 +463,6 @@
 
           <button class="btn" type="submit">Send Message</button>
         </form>
-
-
-        <input type="hidden" name="_next" value="https://sumit-jr.github.io/Portfolio/thankyou.html">
 
 
         <p class="meta" style="margin-top:10px;">
