--- a/index.html
+++ b/index.html
@@ -502,52 +502,49 @@
 
 
     <!-- CONTACT -->
-    <section id="contact" class="section">
-      <div class="container">
-        <h2>Contact</h2>
-        <p class="lead">Want to collaborate or chat about research/engineering? I read every message.</p>
-        <form action="https://formsubmit.co/er.sumitsah@gmail.com" method="POST">
-          <!-- Redirect to thank-you page after submit -->
-          <input type="hidden" name="_next" value="https://sumit-jr.github.io/Portfolio/thankyou.html">
-          
-          <!-- Optional settings -->
-          <input type="hidden" name="_subject" value="Portfolio Contact">
-          <input type="hidden" name="_captcha" value="true">
-          <input type="text" name="_honey" style="display:none">
+<section id="contact" class="section">
+  <div class="container">
+    <h2>Contact</h2>
+    <p class="lead">Want to collaborate or chat about research/engineering? I read every message.</p>
 
-          <!-- Visible fields -->
-          <label class="sr-only" for="name">Name</label>
-          <input id="name" name="name" placeholder="Your name" required>
+    <form action="https://formsubmit.co/er.sumitsah@gmail.com" method="POST">
+      <!-- Redirect to thank-you page after submit -->
+      <input type="hidden" name="_next" value="https://sumit-jr.github.io/Portfolio/thankyou.html">
+      <!-- Optional settings -->
+      <input type="hidden" name="_subject" value="Portfolio Contact">
+      <!-- (Removed captcha as requested) -->
+      <input type="text" name="_honey" style="display:none">
 
-          <label class="sr-only" for="email">Email</label>
-          <input id="email" name="email" type="email" 
-                placeholder="you@example.com" required
-                pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
-                title="Please enter a valid email address (e.g. name@example.com)">
+      <!-- Visible fields -->
+      <label class="sr-only" for="name">Name</label>
+      <input id="name" name="name" placeholder="Your name" required autocomplete="name">
 
-          <label class="sr-only" for="msg">Message</label>
-          <textarea id="msg" name="message" placeholder="How can I help?" required></textarea>
+      <label class="sr-only" for="email">Email</label>
+      <input
+        id="email"
+        name="email"
+        type="email"
+        placeholder="you@example.com"
+        required
+        autocomplete="email"
+        inputmode="email"
+        pattern="^[A-Za-z0-9][A-Za-z0-9._%+-]*@[A-Za-z0-9.-]+\.[A-Za-z]{2,24}$"
+        title="Use a valid email like name@example.com"
+      >
 
-          <button class="btn" type="submit">Send Message</button>
-        </form>
+      <label class="sr-only" for="msg">Message</label>
+      <textarea id="msg" name="message" placeholder="How can I help?" required minlength="5"></textarea>
 
+      <button class="btn" type="submit">Send Message</button>
+    </form>
 
-        <p class="meta" style="margin-top:10px;">
-          Or email me directly: <a class="link" href="mailto:er.sumitsah@gmail.com">er.sumitsah@gmail.com</a>
-        </p>
-      </div>
-    </section>
+    <p class="meta" style="margin-top:10px;">
+      Or email me directly: <a class="link" href="mailto:er.sumitsah@gmail.com">er.sumitsah@gmail.com</a>
+    </p>
+  </div>
+</section>
 
-    <!-- RESUME -->
-    <section id="resume" class="section">
-      <div class="container">
-        <h2>Resume</h2>
-        <p class="lead">Prefer a single page? Grab the PDF.</p>
-        <a class="btn" href="assets/Sumit_Sah_Resume.pdf" target="_blank" rel="noopener noreferrer">Download Resume</a>
-      </div>
-    </section>
-  </main>
-
+<!-- FOOTER -->
   <footer>
     <div class="container">
       <div class="row center">
